# 371os

01/src/: main.rs
02/02/: Cargo.toml
02/src/: main.rs
21/src/: main.rs
22/: Cargo.toml
22/src/: lib.rs  main.rs
32/: Cargo.toml
32/.cargo/: config.toml
32/src/: main.rs
42/: Cargo.toml
42/.cargo/: config.toml
42/src/: interrupts.rs  main.rs  vga.rs
60/: Cargo.toml
60/src/: interrupts.rs  main.rs  vga.rs
B0/42/src/: colors.rs  main.rs  vga.rs
B0/src/: .main.rs.swo  interrupts.rs  main.rs  serial.rs
B2/: Cargo.toml
B2/42/src/: macros.rs
B2/42/src/colors/: img.rs
B2/src/: lib.rs  memory.rs
final/: Cargo.toml  url_to_rs.py
final/.cargo/: config.toml
final/42/: extract_colors.py
final/src/: interrupts.rs  lib.rs  main.rs  snake.rs
split/src/: lib.rs  main.rs
