[package]
name = "osirs"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
spin = "0.9"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"


[[bin]]
name = "osirs"
path = "src/main.rs"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-no-reboot"
]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-no-reboot"]

